# progetto-prova

./: CMakeLists.txt  Controller.cpp  Controller.h  Loader.cpp  Loader.h  Model.cpp  Model.h  Observer.h  Subject.h  View.cpp  View.h  main.cpp
test/: CMakeLists.txt  TestLoader.cpp  TestModel.cpp  runAllTests.cpp
